# app/controllers/puntoPagosController.js
@@ -2,6 +2,7 @@
 var puntoPagos = require('puntopagos-node');
 
 var Notification = require('../models/notification');
+var PaymentInformation = require('../models/paymentInformation');
 
 /** 
  * Modificar variables de configuración en Modulo PuntoPagos.
@@ -16,14 +17,9 @@ var Notification = require('../models/notification');
 
 module.exports = {
   pagar: pagar,
-  notificacion: notificacion,
-  validar: validar
+  getNotificacion: getNotificacion,
+  postNotificacion: postNotificacion
 };
-
-/**
-   * parameters expected in the args:
-  * monto (String)
-  **/
 
 function pagar(req, res) {
 	// variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
@@ -36,26 +32,55 @@ function pagar(req, res) {
 	var generatedId = puntoPagos.generateId();
 	puntoPagos.pay(generatedId, monto, puntoPagos.paymentMethod.ripley, function callback(err, data){
 		if (!err) {
-			var paymentInformation = {
+			var paymentInformation = new PaymentInformation ({
 				generatedId : generatedId,
 				token : data.token,
+				monto : monto,
 				redirect : data.redirect
-			};
-			res.send(paymentInformation);
+			});
+
+			paymentInformation.save(function (err, resp) {
+			    if (!err) {
+			      res.send(resp);
+			      console.log('LOG: Payment Information PuntoPagos successfully regiter');
+			    } else {
+			      res.status(500).send({ code: 500, desc: err});
+			      console.log('ERROR: ' + err);
+			    }
+			});
 		} else {
 			console.log(err);
 			res.send('Error Method Pay :: ' + err);
 		}
 	});
-	// err, data -> {token:token, redirect:redirect}
 }
 
-/**
-   * parameters expected in the args:
-  * generatedId (String)
-  **/
-  
-function notificacion(req, res) {
+function getNotificacion(req, res) {
+	// Validate payament
+
+	var token = req.param('token');
+
+	PaymentInformation.findOne({token:token}, function (err, pInformation) {
+		if (!err && pInformation) {
+
+			// Validate payament
+			puntoPagos.validate(token, pInformation.generatedId, pInformation.monto, function callback(err, data) {
+				if (!err) {
+					saveNotification(data);
+					res.send('Compra OK');
+				} else {
+					console.log(err);
+					res.status(401).send({ code: 401, descripcion: 'Fallo en la autenticación de Token (' + err + ')'});
+				}
+			});
+		} else {
+			res.status(404).send({ code: 404, desc: "PaymentInformation doesn't exist"});
+		}
+	});
+
+}
+
+function postNotificacion(req, res) {
 	// Validate payament
 
 	var data = req.body;
@@ -63,27 +88,44 @@ function notificacion(req, res) {
 	var head_fecha = req.headers.fecha;
 	var head_autorizacion = req.headers.autorizacion;
 
-	var token = body.token || '';
-	var trx_id = body.trx_id || '';
-	var medio_pago = body.medio_pago || '';
-	var monto = body.monto || '';
-	var fecha_operacion = body.fecha_operacion || '';
-	var numero_tarjeta = body.numero_tarjeta || '';
-	var num_cuotas = body.num_cuotas || '';
-	var tipo_cuotas = body.tipo_cuotas || '';
-	var valor_cuota = body.valor_cuota || '';
-	var primer_vencimiento = body.primer_vencimiento || '';
-	var numero_operacion = body.numero_operacion || '';
-	var codigo_autorizacion = body.codigo_autorizacion || '';
+	data.head_fecha = head_fecha;
+	data.head_autorizacion = head_autorizacion;
+
+	saveNotification(data);
+}
+
+function saveNotification (data, callback) {
+
+	var head_fecha = data.head_fecha || '';
+	var head_autorizacion = data.head_autorizacion || '';
+
+	var respuesta = data.respuesta || '';
+	var token = data.token || '';
+	var trx_id = data.trx_id || '';
+	var medio_pago = data.medio_pago || '';
+	var medio_pago_descripcion = data.medio_pago_descripcion || '';
+	var monto = data.monto || '';
+	var fecha_operacion = data.fecha_operacion || '';
+	var fecha_aprobacion = data.fecha_aprobacion || '';
+	var numero_tarjeta = data.numero_tarjeta || '';
+	var num_cuotas = data.num_cuotas || '';
+	var tipo_cuotas = data.tipo_cuotas || '';
+	var valor_cuota = data.valor_cuota || '';
+	var primer_vencimiento = data.primer_vencimiento || '';
+	var numero_operacion = data.numero_operacion || '';
+	var codigo_autorizacion = data.codigo_autorizacion || '';
 
 	var notification = new Notification ({
 		head_fecha: head_fecha,
 	    head_autorizacion: head_autorizacion,
+	    respuesta: respuesta,
 	    token: token,
 	    trx_id: trx_id,
 		medio_pago: medio_pago,
+		medio_pago_descripcion: medio_pago_descripcion,
 		monto: monto,
 		fecha_operacion: fecha_operacion,
+		fecha_aprobacion: fecha_aprobacion,
 		numero_tarjeta: numero_tarjeta,
 		num_cuotas: num_cuotas,
 		tipo_cuotas: tipo_cuotas,
@@ -95,29 +137,9 @@ function notificacion(req, res) {
 	  
 	notification.save(function (err, resp) {
 	    if (!err) {
-	      res.send(resp);
 	      console.log('LOG: Notification PuntoPagos successfully regiter');
 	    } else {
-	      res.status(500).send({ code: 500, desc: err});
 	      console.log('ERROR: ' + err);
 	    }
-	});
-
-}
-
-/**
-   * parameters expected in the args:
-  * generatedId (String)
-  **/
-
-function validar(req, res) {
-	// Validate payament
-	puntoPagos.validate(token, generatedId, monto, function callback(err, data) {
-		if (!err) {
-			res.send(data);
-		} else {
-			console.log(err);
-			res.send('Error Method Validate :: ' + err);
-		}
 	});
 }
